@@ -69,94 +69,95 @@
 #define SWITCH_JOIN 66
 #define SWITCH_LETTER 67
 #define SWITCH_LIST 68
-#define SWITCH_LOCKS 69
-#define SWITCH_LOWERCASE 70
-#define SWITCH_LSARGS 71
-#define SWITCH_ME 72
-#define SWITCH_MEMBERS 73
-#define SWITCH_MOD 74
-#define SWITCH_MOGRIFIER 75
-#define SWITCH_MORTAL 76
-#define SWITCH_MOTD 77
-#define SWITCH_MUTE 78
-#define SWITCH_NAME 79
-#define SWITCH_NO 80
-#define SWITCH_NOEVAL 81
-#define SWITCH_NOFLAGCOPY 82
-#define SWITCH_NOISY 83
-#define SWITCH_NOPARSE 84
-#define SWITCH_NOSIG 85
-#define SWITCH_NOSPACE 86
-#define SWITCH_NOTIFY 87
-#define SWITCH_NUKE 88
-#define SWITCH_OFF 89
-#define SWITCH_ON 90
-#define SWITCH_OUTSIDE 91
-#define SWITCH_OVERRIDE 92
-#define SWITCH_PAGING 93
-#define SWITCH_PANIC 94
-#define SWITCH_PARANOID 95
-#define SWITCH_PARENT 96
-#define SWITCH_PLAYERS 97
-#define SWITCH_PORT 98
-#define SWITCH_POWERS 99
-#define SWITCH_PREFIX 100
-#define SWITCH_PRESERVE 101
-#define SWITCH_PRINT 102
-#define SWITCH_PRIVS 103
-#define SWITCH_PURGE 104
-#define SWITCH_QUICK 105
-#define SWITCH_QUIET 106
-#define SWITCH_READ 107
-#define SWITCH_REBOOT 108
-#define SWITCH_RECALL 109
-#define SWITCH_REGEXP 110
-#define SWITCH_REGIONS 111
-#define SWITCH_REGISTER 112
-#define SWITCH_REMOVE 113
-#define SWITCH_RENAME 114
-#define SWITCH_RESTORE 115
-#define SWITCH_RESTRICT 116
-#define SWITCH_RETROACTIVE 117
-#define SWITCH_ROOM 118
-#define SWITCH_ROOMS 119
-#define SWITCH_RSARGS 120
-#define SWITCH_SAVE 121
-#define SWITCH_SEE 122
-#define SWITCH_SEEFLAG 123
-#define SWITCH_SELF 124
-#define SWITCH_SEND 125
-#define SWITCH_SET 126
-#define SWITCH_SILENT 127
-#define SWITCH_SKIPDEFAULTS 128
-#define SWITCH_SPEAK 129
-#define SWITCH_SPOOF 130
-#define SWITCH_STATS 131
-#define SWITCH_STATUS 132
-#define SWITCH_SUMMARY 133
-#define SWITCH_TABLES 134
-#define SWITCH_TAG 135
-#define SWITCH_TELEPORT 136
-#define SWITCH_TF 137
-#define SWITCH_THINGS 138
-#define SWITCH_TITLE 139
-#define SWITCH_TRACE 140
-#define SWITCH_TYPE 141
-#define SWITCH_UNCLEAR 142
-#define SWITCH_UNFOLDER 143
-#define SWITCH_UNGAG 144
-#define SWITCH_UNHIDE 145
-#define SWITCH_UNMUTE 146
-#define SWITCH_UNREAD 147
-#define SWITCH_UNTAG 148
-#define SWITCH_UNTIL 149
-#define SWITCH_URGENT 150
-#define SWITCH_USEFLAG 151
-#define SWITCH_WHAT 152
-#define SWITCH_WHO 153
-#define SWITCH_WIPE 154
-#define SWITCH_WIZ 155
-#define SWITCH_WIZARD 156
-#define SWITCH_YES 157
-#define SWITCH_ZONE 158
+#define SWITCH_LOCAL 69
+#define SWITCH_LOCKS 70
+#define SWITCH_LOWERCASE 71
+#define SWITCH_LSARGS 72
+#define SWITCH_ME 73
+#define SWITCH_MEMBERS 74
+#define SWITCH_MOD 75
+#define SWITCH_MOGRIFIER 76
+#define SWITCH_MORTAL 77
+#define SWITCH_MOTD 78
+#define SWITCH_MUTE 79
+#define SWITCH_NAME 80
+#define SWITCH_NO 81
+#define SWITCH_NOEVAL 82
+#define SWITCH_NOFLAGCOPY 83
+#define SWITCH_NOISY 84
+#define SWITCH_NOPARSE 85
+#define SWITCH_NOSIG 86
+#define SWITCH_NOSPACE 87
+#define SWITCH_NOTIFY 88
+#define SWITCH_NUKE 89
+#define SWITCH_OFF 90
+#define SWITCH_ON 91
+#define SWITCH_OUTSIDE 92
+#define SWITCH_OVERRIDE 93
+#define SWITCH_PAGING 94
+#define SWITCH_PANIC 95
+#define SWITCH_PARANOID 96
+#define SWITCH_PARENT 97
+#define SWITCH_PLAYERS 98
+#define SWITCH_PORT 99
+#define SWITCH_POWERS 100
+#define SWITCH_PREFIX 101
+#define SWITCH_PRESERVE 102
+#define SWITCH_PRINT 103
+#define SWITCH_PRIVS 104
+#define SWITCH_PURGE 105
+#define SWITCH_QUICK 106
+#define SWITCH_QUIET 107
+#define SWITCH_READ 108
+#define SWITCH_REBOOT 109
+#define SWITCH_RECALL 110
+#define SWITCH_REGEXP 111
+#define SWITCH_REGIONS 112
+#define SWITCH_REGISTER 113
+#define SWITCH_REMOVE 114
+#define SWITCH_RENAME 115
+#define SWITCH_RESTORE 116
+#define SWITCH_RESTRICT 117
+#define SWITCH_RETROACTIVE 118
+#define SWITCH_ROOM 119
+#define SWITCH_ROOMS 120
+#define SWITCH_RSARGS 121
+#define SWITCH_SAVE 122
+#define SWITCH_SEE 123
+#define SWITCH_SEEFLAG 124
+#define SWITCH_SELF 125
+#define SWITCH_SEND 126
+#define SWITCH_SET 127
+#define SWITCH_SILENT 128
+#define SWITCH_SKIPDEFAULTS 129
+#define SWITCH_SPEAK 130
+#define SWITCH_SPOOF 131
+#define SWITCH_STATS 132
+#define SWITCH_STATUS 133
+#define SWITCH_SUMMARY 134
+#define SWITCH_TABLES 135
+#define SWITCH_TAG 136
+#define SWITCH_TELEPORT 137
+#define SWITCH_TF 138
+#define SWITCH_THINGS 139
+#define SWITCH_TITLE 140
+#define SWITCH_TRACE 141
+#define SWITCH_TYPE 142
+#define SWITCH_UNCLEAR 143
+#define SWITCH_UNFOLDER 144
+#define SWITCH_UNGAG 145
+#define SWITCH_UNHIDE 146
+#define SWITCH_UNMUTE 147
+#define SWITCH_UNREAD 148
+#define SWITCH_UNTAG 149
+#define SWITCH_UNTIL 150
+#define SWITCH_URGENT 151
+#define SWITCH_USEFLAG 152
+#define SWITCH_WHAT 153
+#define SWITCH_WHO 154
+#define SWITCH_WIPE 155
+#define SWITCH_WIZ 156
+#define SWITCH_WIZARD 157
+#define SWITCH_YES 158
+#define SWITCH_ZONE 159
 #endif                          /* SWITCHES_H */
