@@ -68,6 +68,7 @@ SWITCH_VALUE switch_list[] = {
   {"JOIN", SWITCH_JOIN},
   {"LETTER", SWITCH_LETTER},
   {"LIST", SWITCH_LIST},
+  {"LOCAL", SWITCH_LOCAL},
   {"LOCKS", SWITCH_LOCKS},
   {"LOWERCASE", SWITCH_LOWERCASE},
   {"LSARGS", SWITCH_LSARGS},
